--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-PORT=4000
-MONGO_LOCAL_URI=mongodb://127.0.0.1:27017/image_uploader
-MONGO_CLOUD_URI=mongodb+srv://render:whenpassword@render217.6hxifck.mongodb.net/pagination_tutorial
-CLOUD_NAME=dis3kqgx3
-API_KEY=512771137534276
-API_SECRET=Bc8CnniJJ-0St_YUBIzF-mAe1xU
+PORT=
+MONGO_LOCAL_URI=
+MONGO_CLOUD_URI=
+CLOUD_NAME=
+API_KEY=
+API_SECRET=
