--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "cloudinary": "^1.40.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongoose": "^7.4.5",
